[package]
name = "das_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
discv5-overlay = {git = "https://github.com/timoth-y/discv5-overlay" }
discv5 = "0.1"

[patch.crates-io]
discv5 = {git = "https://github.com/timoth-y/discv5"}